0.018 2021-07-20
- Correct filtering of vector fields

0.017 2021-06-26
- switch from PDL::Complex to native-complex

0.016 2021-05-30
- Factor several repetitive tasks
- use PDL::FFTW3's new ability to take PDL::Complex inputs
- Moose type abstracting real vs complex (inc native) data

0.015 2021-03-12
- convert from bundled Fortran code to PDL::LinearAlgebra

0.014 2020-03-26
  - Fix (again) t/geometry.t's bug when netpbm files are not available

0.013 2020-03-26
  - Add error message to Geometry::FromImage2D in case image file can't be read.

0.012 2020-03-25
  - Fix t/geometry.t's bug when netpbm files are not available

0.011 2019-03-09
  - Change travis file
  - Add before_install to .travis.yml
  - Other changes to travis.yml
  - Skip dimensions to HProd
  - Skip dimensions in MHProd, not sure it works
  - Commented out Lucila's storeAllH
  - Add generalizations to two and more media.
  - New directories: NPhase.
  - NPhase/OneH
  - NPhase/AllH
  - Change Pod to new OneH AllH
  - Allow complex Haydock coefficients in new codes.
  - Added NPhase/EpsL
  - Added NPhase/EpsTensor
  - Added non Hermitian euclidean complex scalar product to Utils EProd
  - Modify NPhases::OneH and AllH to use EProd
  - Added N phases spinor methods in directory NPS
  - Add NPS::OneH, , NPS::EpsL, NPS::EpsTensor
  - Added mGNorm (minus normalized reciprocal vectors) to Geometry.
  - Added pmGNorm (plus and minus normalized reciprocal vectors) to
    Geometry.
  - Added spinor euclidean scalar product SProd to Utils
  - Use SProd in NPS/OneH
  - Change organization to allow more code reuse.
  - Made Roles for Geometry, OneH and AllH.
  - Made directory/class hierarchy according to system. Thus, LE is for
    longitudinal epsilon (dielectric function) and WE for wave
    equation. NR2 is for non retarded with two media. R2 is for
    retarded with 2 media.
  - Made documentation modules for the generic functions. Thus
    Photonic::OneH is only documentation, while