@@ -122,8 +122,10 @@ use Moose;
 use Moose;
 use MooseX::StrictConstructor;
 
+has 'is_hermitian'=>(is=>'ro', default=>sub{0});
+
 extends 'Photonic::LE::S::OneH';
-with 'Photonic::Roles::AllH', 'Photonic::Roles::ReorthogonalizeC';
+with 'Photonic::Roles::AllH', 'Photonic::Roles::Reorthogonalize';
 
 __PACKAGE__->meta->make_immutable;
 
