@@ -118,8 +118,11 @@ Array of Haydock b coefficients squared
 use namespace::autoclean;
 use Moose;
 use MooseX::StrictConstructor;
+
+has 'is_hermitian'=>(is=>'ro', default=>sub{0});
+
 extends 'Photonic::WE::S::OneH';
-with 'Photonic::Roles::AllH', 'Photonic::Roles::ReorthogonalizeC';
+with 'Photonic::Roles::AllH', 'Photonic::Roles::Reorthogonalize';
 
 __PACKAGE__->meta->make_immutable;
 
